--- a/02_Struktura_dokumentu_HTML/01_Kodowanie_liter/index.html
+++ b/02_Struktura_dokumentu_HTML/01_Kodowanie_liter/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="pl-PL">
 <head>
+  <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
+  </head>
 <body>
 <h1>
   Mała muszka
