--- a/03_Formatowanie_tekstu_w_HTML/01_Naglowki/index.html
+++ b/03_Formatowanie_tekstu_w_HTML/01_Naglowki/index.html
@@ -7,6 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+
+      <h1>Nagłówek h1</h1>
+      <h2>Nagłówek h2</h2>
+      <h3>Nagłówek h3</h3>
       <!-- tutaj wstawmy elementy -->
 
     </body>
