--- a/03_Formatowanie_tekstu_w_HTML/02_Paragrafy/index.html
+++ b/03_Formatowanie_tekstu_w_HTML/02_Paragrafy/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+      <p>Paragraf nr 1</p> 
+      <p>Paragraf nr 2</p>
+      <p>Paragraf nr 3</p>
       <!-- tutaj wstawmy elementy -->
 
     </body>
