Dodanie list punktów

--- a/03_Formatowanie_tekstu_w_HTML/03_Listy_ul/index.html
+++ b/03_Formatowanie_tekstu_w_HTML/03_Listy_ul/index.html
@@ -7,6 +7,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+      Lista punktów
+        <ul>
+          <li>Punkt 1</li>
+          <li>Punkt 2</li>
+          <li>Punkt 3</li>
+        </ul>
+      <div>Alternatywna lista punktów</div>
+        <ul>
+          <li>Punkt 1
+            <ul>
+              <li>Punkt 1a
+                <ul>
+                  <li>Punkt 1c</li>
+                  <li>Punkt 2c</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
       <!-- tutaj wstawmy elementy -->
 
     </body>
