Dodanie listy z punktami

--- a/03_Formatowanie_tekstu_w_HTML/04_Listy_ol/index.html
+++ b/03_Formatowanie_tekstu_w_HTML/04_Listy_ol/index.html
@@ -7,6 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+      <ol>Lista z punktami
+        <li>Punkt 1</li>
+        <li>Punkt 2</li>
+        <li>Punkt 3</li>
+      </ol>
       <!-- tutaj wstawmy elementy -->
 
     </body>
