Dodanie linku do strony autora

--- a/04_Hiperlacza/01_Strona_autora/index.html
+++ b/04_Hiperlacza/01_Strona_autora/index.html
@@ -11,6 +11,9 @@
 
         <nav class="main-nav">
             <ul class="main-nav-list">
+                <li>
+                    <a href="author.html">Przejdź do strony Autora</a>
+                </li>
                 <!-- tutaj wstawmy element LI z linkiem do strony author.html -->
 					  </ul>
         </nav>
