--- a/05_Obrazki_w_dokumentach_HTML/01_Obrazki/index.html
+++ b/05_Obrazki_w_dokumentach_HTML/01_Obrazki/index.html
@@ -8,5 +8,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <img src="images/photo1.jpg">
+        <img src="images/photo2.jpg">
+        <img src="images/photo3.jpg">
+        <img src="images/photo4.jpg">
     </body>
 </html>
