--- a/07_CSS_kaskadowe_arkusze_stylow/01_Zadania/index.html
+++ b/07_CSS_kaskadowe_arkusze_stylow/01_Zadania/index.html
@@ -5,7 +5,7 @@
         <title>Hiperłącza</title>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css"> <!--plik CSS jest już dołączony do pliku html-->
 	</head>
     <body>
 
