--- a/08_Box_model/01_Zadania/index.html
+++ b/08_Box_model/01_Zadania/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="content-top"></div>
-    <div class="content" style="max-width: 80%; padding: 50px; box-sizing:border-box">
+    <div class="content" style="max-width: 80%; padding: 50px; box-sizing:border-box;">
         <h1 class="content-title">Przykładowy tytuł</h1>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias architecto blanditiis deserunt dolorum ducimus earum error explicabo illum incidunt laboriosam laudantium libero maiores, nesciunt nostrum, nulla placeat quaerat quo quos voluptas! Accusantium amet blanditiis dolor, dolore dolorem, fuga fugiat harum illum iusto laborum, maiores mollitia nam numquam pariatur porro provident quae quo quos rem sequi soluta ullam vero. Accusamus ad animi architecto earum eligendi, facere iusto, laudantium natus necessitatibus non perferendis perspiciatis provident qui quibusdam rem repellat reprehenderit veritatis voluptate!
         A alias assumenda commodi cupiditate, dicta dolorem doloremque eligendi fugit iure libero nihil odio pariatur placeat quae veniam voluptate.
         </p>
 
-        <a href="" class="btn">Pokaż składniki</a>
+        <a href="" class="btn" style="padding: 20px 40px; margin-bottom: 20px; display: block;">Pokaż składniki</a>
 
 
 
