Zadanie C: Pasek przewijania w galerii zdjęć

--- a/08_Box_model/01_Zadania/index.html
+++ b/08_Box_model/01_Zadania/index.html
@@ -23,7 +23,7 @@
 
         <div class="gallery">
             <h2 class="gallery-title">Galeria zdjęć</h2>
-            <div class="gallery-content">
+            <div class="gallery-content" style="overflow-x: auto;">
                 <a href="#" class="gallery-link"><img src="images/photo1.jpg"></a>
                 <a href="#" class="gallery-link"><img src="images/photo2.jpg"></a>
                 <a href="#" class="gallery-link"><img src="images/photo3.jpg"></a>
