Opcja btn: inline-block, zamiast block

--- a/08_Box_model/01_Zadania/index.html
+++ b/08_Box_model/01_Zadania/index.html
@@ -17,7 +17,7 @@
         A alias assumenda commodi cupiditate, dicta dolorem doloremque eligendi fugit iure libero nihil odio pariatur placeat quae veniam voluptate.
         </p>
 
-        <a href="" class="btn" style="padding: 20px 40px; margin-bottom: 20px; display: block;">Pokaż składniki</a>
+        <a href="" class="btn" style="padding: 20px 40px; margin-bottom: 20px; display: inline-block;">Pokaż składniki</a>
 
 
 
