Zmiany w sekcji header

--- a/09_Pozycjonowanie_elementow/01_Zadania/index.html
+++ b/09_Pozycjonowanie_elementow/01_Zadania/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pozycjonowanie elementów</title>
     <link rel="stylesheet" href="css/style.css">
+    <style> .header {display:flex;
+                    justify-content: space-between;
+                    align-items: center;}
+            .menu-list {display:flex;
+                        justify-content: flex-end;}    
+    </style>
 </head>
 <body>
 
