Zmiany w wyświetl. artykułów-zdjęcie obok treści

--- a/09_Pozycjonowanie_elementow/01_Zadania/index.html
+++ b/09_Pozycjonowanie_elementow/01_Zadania/index.html
@@ -9,8 +9,8 @@
     <style> .header {display:flex;
                     justify-content: space-between;
                     align-items: center;}
-            .menu-list {display:flex;
-                        justify-content: flex-end;}    
+            .menu-list {display:flex;}
+            .article {display:flex;}    
     </style>
 </head>
 <body>
