--- a/10_Kolory_i_jednostki_w_CSS/01_Zadania/index.html
+++ b/10_Kolory_i_jednostki_w_CSS/01_Zadania/index.html
@@ -7,6 +7,17 @@
     <title>Pozycjonowanie elementów</title>
     <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Playfair+Display:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .container {width: 680 px;
+                    max-width: 90%;
+                    padding: 50px;
+                    background-color: rgba(255, 255, 255, 0.95);
+                    font-size: 15px;
+                    line-height: 1.5em;
+                    color: rgba(0, 0, 0, 0.6);
+
+        }
+    </style>
 </head>
 <body>
 <div class="container">
