Poprawa wyświetlania galerii

--- a/10_Kolory_i_jednostki_w_CSS/01_Zadania/index.html
+++ b/10_Kolory_i_jednostki_w_CSS/01_Zadania/index.html
@@ -19,7 +19,12 @@
         .header {color: #b4411e;
             font-size: 32px;
             line-height: 1em;
-         }
+        }
+        .gallery a {max-width: 50%;
+                    padding: 3px;
+        }
+        .gallery img {max-width:100%;}
+         
     </style>
 </head>
 <body>
