--- a/14_Stylowanie_list/01_Zadania/index.html
+++ b/14_Stylowanie_list/01_Zadania/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stylowanie list</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .menu {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: space-between;    
+        }
+        
+    </style>
 </head>
 <body>
 
