--- a/16_Projektowanie_formularzy/01_Zadania/index.html
+++ b/16_Projektowanie_formularzy/01_Zadania/index.html
@@ -10,6 +10,16 @@
 <body>
 
     <form>
+        <label for="name"> Wypełnij input </label>
+        <input type="text" id="name" name="name">
+
+        <label> Wypełnij e-mail <input type="email" id="email" name="email"> </label>
+
+        <label for="msg"> Wypełnij textarea </label>
+        <textarea id="msg" name="msg"> </textarea>
+
+        <button type="submit"> Wyślij </button>        
+        
         <!-- tutaj wstaw odpowiednie elementy -->
         <!-- np.
           label
